# Visual_Inertial_Odometry

./: IMU_Stereo_ROS_Synchronisation  MultiSensorSynch_node.cpp  README.md  StereoSynch_node.cpp  Stereo_Inertial_Synch.cpp  Stereo_Synch_ROS.cpp  VI-ORB-SLAM2_Stereo_Inertial_Synch  message_filter_over_rosbag.py  multi_sensor_synch.cpp  synchronize_node.cpp  timeSynchronizer.cpp
ROS Stereo Synchronization/: CMakeLists.txt  package.xml
ROS Stereo Synchronization/src/: StereoSynch_node.cpp
ROS Stereo-Inertial Synchronization/: CMakeLists.txt  package.xml
ROS Stereo-Inertial Synchronization/src/: synchronize_node.cpp
