<?xml version="1.0"?>
<package format="2">
  <name>StereoSynch</name>
  <version>0.0.0</version>
  <description>The Stereo Synchronization package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_filters</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
